fix: cursor inmodal text field jumps to end of input

--- a/webui/react/src/hooks/useModal/Model/useModalModelCreate.module.scss
+++ b/webui/react/src/hooks/useModal/Model/useModalModelCreate.module.scss
@@ -7,7 +7,7 @@
     margin: 0;
   }
   .uniqueWarning {
-    color: var(--theme-colors-danger-normal);
+    color: var(--theme-status-warning);
     margin: 0;
   }
   .expandDetails {
